# forschungsseminar-nlp

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements-nocuda.txt  requirements.txt
scripts/: download-dump.sh  download-large-dump.sh
src/: Aufgabe 1.ipynb  aufgabe2.ipynb  data-exploring.ipynb
