[tool.poetry]
name = "forschungsseminar-nlp"
version = "0.1.0"
description = ""
authors = ["Laura Morlok, Amon Schneider, Tobias Hölzer"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
feather-format = "^0.4.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
plotly = "^5.9.0"
tqdm = "^4.64.0"
nltk = "^3.7"
rake-nltk = "^1.0.6"
requests = "^2.28.1"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
transformers = "^4.20.1"
jupyter = "^1.0.0"
datasets = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
